VeraSandBox2016/src/objects/Deployment__c.object
<CustomObject>
    <fields>
        <fullName>Brief_Pack_Sent_On__c</fullName>
        <label>Brief Pack Sent On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Brief_Pack_Sent__c</fullName>
        <label>Brief Pack Sent</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CVIC__c</fullName>
        <formula>Position__r.SGBV__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CVIC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contract_Signed_On__c</fullName>
        <label>Contract Signed On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Signed__c</fullName>
        <label>Contract Signed</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contracting_Details__c</fullName>
        <label>Contracting Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contractor__c</fullName>
        <inlineHelpText>EMP: Employer
JRR: JRR
REQ: Requesting entity
End-User: End-User
IMP: Implementing Partner
MIX: mixed contracting</inlineHelpText>
        <label>Contractor</label>
        <picklist>
            <picklistValues>
                <fullName>EMP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JRR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>End-User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IMP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MIX</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Date_of_Deployment__c</fullName>
        <label>Date of Deployment</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Debrief_Date__c</fullName>
        <label>Debrief Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Debrief__c</fullName>
        <label>Debrief</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Duration_m__c</fullName>
        <label>Duration (m)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Employer_Approval_On__c</fullName>
        <label>Employer Approval On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Employer_Approval__c</fullName>
        <label>Employer Approval</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Expert__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Expert</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Deployments</relationshipLabel>
        <relationshipName>Deployments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ext_Duration_m__c</fullName>
        <label>Ext. Duration (m)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Extended__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Extended</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FIAR__c</fullName>
        <formula>Position__r.FIAR__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FIAR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FOR__c</fullName>
        <formula>Position__r.FOR__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FOR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Final_Deployment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this Deployment preliminary or has it been finalized?</description>
        <label>Final Deployment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ISIL__c</fullName>
        <formula>Position__r.ISIL__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ISIL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invoice_Date__c</fullName>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice__c</fullName>
        <label>Invoice</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MENA__c</fullName>
        <formula>Position__r.MENA__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MENA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mission__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mission</label>
        <referenceTo>Mission__c</referenceTo>
        <relationshipLabel>Deployments</relationshipLabel>
        <relationshipName>Deployments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Position</label>
        <referenceTo>Position__c</referenceTo>
        <relationshipLabel>Deployments</relationshipLabel>
        <relationshipName>Deployments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Focus__c</fullName>
        <formula>TEXT(Position__r.Primary_Focus__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Focus</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reimbursement_Claim_Date__c</fullName>
        <label>Reimbursement Claim Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reimbursement_Claim__c</fullName>
        <label>Reimbursement Claim</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SGBV__c</fullName>
        <formula>Position__r.SGBV__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SGBV</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>PROP: Proposed
N-SHORT: Not shortlisted
SHORT: Shortlisted
UNAV: Unavailable
UNRE: Unreachable
UNWA: Unwanting
PROF-S: Profile sent
N-SEL: Not selected
SEL: Selected
DEPL: Deployed
COMP: Back but not debriefed
DEB: Debriefed
CAN: Cancelled</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>SEARCH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PROP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N-SHORT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SHORT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UNAV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UNRE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UNWA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PROF-S</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N-SEL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DEPL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COMP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DEB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAN</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Timesheet_Date__c</fullName>
        <label>Timesheet Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Timesheet__c</fullName>
        <label>Timesheet</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X2011_Syria_Conflict__c</fullName>
        <formula>Position__r.X2011_Syria_Conflict__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>2011 Syria Conflict</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X2014_Iraq_Conflict__c</fullName>
        <formula>Position__r.X2014_Iraq_Conflict__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>2014 Iraq Conflict</label>
        <type>Checkbox</type>
    </fields>
    <label>Deployment</label>
    <listViews>
        <fullName>All_Deployments</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Expert__c</columns>
        <columns>Mission__c</columns>
        <columns>Position__c</columns>
        <columns>Primary_Focus__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Deployments</label>
    </listViews>
    <nameField>
        <displayFormat>DEP-{00000}</displayFormat>
        <label>JRRID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deployments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>